--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,4 @@
-// @import 'core/variables';
-// @import 'core/reset';
-// @import 'components/code';
-// @import 'components/links';
-// @import 'layout/page';
-// @import 'layout/header';
-// @import 'layout/footer';
-// @import 'pages/index';
+@import 'layout/header';
+@import 'layout/container-nav';
+@import 'layout/containers.scss';
+@import 'layout/footer';
